syntax = "proto3";

package jobsearch;

import "proto/basic/application.proto";
import "proto/first/application.proto";

option go_package = "proto-course/protogen/jobsearch";

message JobCandidate {
    uint32 job_candidate_id = 1 [json_name = "job_candidate_id"];
    job.application.pkg.Application application = 2;
}

message JobSoftware {
    uint32 job_software_id = 1 [json_name = "job_software_id"];
    basic.application.pkg.Application application = 2;
}